@@ -1,7 +1,8 @@
 2.2.4
 -----
 - Added backup duration to reports (Issue #102)
-- Altered database schema to accommodate backup duration in reports. Will require (automatic) DB upgrade. BACKUP YOUR DATABSE AND .RC FILE BEFORE EXECUTING!
+     - Altered database schema to accommodate backup duration in reports. Will require (automatic) DB upgrade. BACKUP YOUR DATABSE AND .RC FILE BEFORE EXECUTING!
+     - Added durationzeroes option in [report] section to determine if zero units should be displayed in the time duration
 - Updated report footer to add program version number
 
 2.2.3
